--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,17 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.15.1</version>
 </dependency>
-
-
-
-
-	</dependencies>
+<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>2.0.1.Final</version>
+</dependency>
+<dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-core</artifactId>
+	<version>6.0.2.Final</version>
+</dependency>
+</dependencies>
 
 	<build>
 		<plugins>
